modules.f90


            PURE REAL(C_DOUBLE)                                                 &
            FUNCTION fteik_localSolverExplicit64fF(tv, te, tn, tev,                  &
                                                   ten, tnv, tnve, tt0,              &
                                                   slow1, slow2, slow3, slow4,       &
                                                   slow5, slow6, slow7,              &
                                                   linitk,                           &
                                                   i, j, k,                          &
                                                   sgntz, sgntx, sgnty,              &
                                                   sgnrz_dzi, sgnrx_dxi, sgnry_dyi)  &
            RESULT(tupd) BIND(C, NAME='fteik_localSolverExplicit64fF')
            !$OMP DECLARE SIMD(fteik_localSolverExplicit64fF) &
            !$OMP UNIFORM(linitk, sgntz, sgntx, sgnty, sgnrz_dzi, sgnrx_dxi, sgnry_dyi)
            USE ISO_C_BINDING
            IMPLICIT NONE 
            REAL(C_DOUBLE), INTENT(IN), VALUE :: tv, te, tn, tev, ten, tnv, tnve, tt0
            REAL(C_DOUBLE), INTENT(IN), VALUE :: slow1, slow2, slow3, slow4, &
                                                 slow5, slow6, slow7
            REAL(C_DOUBLE), INTENT(IN), VALUE :: sgnrz_dzi, sgnrx_dxi, sgnry_dyi
            INTEGER(C_INT), INTENT(IN), VALUE :: i, j, k, sgntx, sgnty, sgntz
            LOGICAL(C_BOOL), INTENT(IN), VALUE :: linitk
            END FUNCTION

            SUBROUTINE fteik_setGridSizeF(nzIn, nxIn, nyIn, ierr) &
                       BIND(C, NAME='fteik_setGridSizeF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(IN) :: nzIn, nxIn, nyIn
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_setGridSpacingF(dzIn, dxIn, dyIn, ierr) &
                       BIND(C, NAME='fteik_setGridSpacingF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            REAL(C_DOUBLE), INTENT(IN) :: dzIn, dxIn, dyIn
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_initializeTravelTimesNearSourceF(ttimes, ierr)      &
                       BIND(C, NAME='fteik_initializeTravelTimesNearSourceF')
            USE ISO_C_BINDING
            IMPLICIT NONE 
            REAL(C_DOUBLE), DIMENSION(:), INTENT(INOUT) :: ttimes
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_setSzeroF(ierr) BIND(C, NAME='fteik_setSzeroF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(OUT) :: ierr 
            END SUBROUTINE

            SUBROUTINE fteik_setModelOriginF(z0In, x0In, y0In) &
                       BIND(C, NAME='fteik_setModelOriginF')
            USE ISO_C_BINDING
            REAL(C_DOUBLE), INTENT(IN) :: x0In, y0In, z0In
            END SUBROUTINE

            SUBROUTINE fteik_setSourceLocationF(zs, xs, ys, ierr) &
                       BIND(C, NAME='fteik_setSourceLocationF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            REAL(C_DOUBLE), INTENT(IN) :: xs, ys, zs
            INTEGER(C_INT), INTENT(OUT) :: ierr 
            REAL(C_DOUBLE) xmax, ymax, zmax, xsrc, ysrc, zsrc 
            END SUBROUTINE

            SUBROUTINE fteik_getSweepLimitsF(sweep, linitk,          &
                                             nz, nx, ny,             &
                                             zsi, xsi, ysi,          &
                                             z1, z2, x1, x2, y1, y2, &
                                             ierr)                   &
                       BIND(C, NAME='fteik_getSweepLimitsF')
            USE ISO_C_BINDING
            IMPLICIT NONE 
            INTEGER(C_INT), INTENT(IN) :: sweep, nx, ny, nz, xsi, ysi, zsi
            LOGICAL(C_BOOL), INTENT(IN) :: linitk
            INTEGER(C_INT), INTENT(OUT) :: x1, x2, y1, y2, z1, z2, ierr
            END SUBROUTINE

            SUBROUTINE fteik_setUpdateNodesF(sweep, nLevels, linitk,     &
                                             levelPtr, ijkv, lupd, ierr) &
                       BIND(C, NAME='fteik_setUpdateNodesF')
            USE ISO_C_BINDING
            IMPLICIT NONE 
            INTEGER(C_INT), INTENT(IN) :: sweep, nLevels
            LOGICAL(C_BOOL), INTENT(IN) :: linitk
            INTEGER(C_INT), DIMENSION(:), INTENT(IN) :: ijkv, levelPtr
            LOGICAL(C_BOOL), DIMENSION(:), INTENT(OUT) :: lupd 
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE fteik_setUpdateNodesF

            SUBROUTINE fteik_setSphericalToCartesianEpsilonF(epsIn, ierr) &
                       BIND(C, NAME='fteik_setSphericalToCartesianEpsilonF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            REAL(C_DOUBLE), INTENT(IN) :: epsIn
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_setNumberOfSweepsF(nsweepIn, ierr)      &
                       BIND(C, NAME='fteik_setNumberOfSweepsF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(IN) :: nsweepIn
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_setEpsSolverF(ierr) &
                       BIND(C, NAME='fteik_setEpsSolverF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_getTravelTimes64fF(ng, tt, ierr) &
                       BIND(C, NAME='fteik_getTravelTimes64fF')
            USE ISO_C_BINDING
            IMPLICIT NONE 
            INTEGER(C_INT), INTENT(IN) :: ng
            REAL(C_DOUBLE), INTENT(OUT) :: tt(ng)
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_setVelocityModel64fF(nv, vel, ierr) &
                       BIND(C, NAME='fteik_setVelocityModel64fF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(IN) :: nv
            REAL(C_DOUBLE), INTENT(IN) :: vel(nv)
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_computeGraphF(ierr)           &
                       BIND(C, NAME='fteik_computeGraphF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(OUT) :: ierr
            END SUBROUTINE

            SUBROUTINE fteik_setVelocityModel32fF(nv, vel4, ierr) &
                       BIND(C, NAME='fteik_setVelocityModel32fF')
            USE ISO_C_BINDING
            IMPLICIT NONE 
            INTEGER(C_INT), INTENT(IN) :: nv
            REAL(C_FLOAT), INTENT(IN) :: vel4(nv)
            INTEGER(C_INT), INTENT(OUT) :: ierr 
            END SUBROUTINE

            SUBROUTINE fteik_prefetchTravelTimes64fF(i, j, k, nz, nzx,    &
                                                     sgntz, sgntx, sgnty, &
                                                     perm, ttimes, ttLoc) &
                       BIND(C, NAME='fteik_prefetchTravelTimes64fF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            REAL(C_DOUBLE), DIMENSION(:), INTENT(IN) :: ttimes
            INTEGER(C_INT), DIMENSION(:), INTENT(IN) :: perm
            INTEGER(C_INT), INTENT(IN) ::  i, j, k, nz, nzx, sgntx, sgnty, sgntz
            REAL(C_DOUBLE), INTENT(OUT) :: ttLoc(8)
            END SUBROUTINE

            SUBROUTINE fteik_prefetchSlowness64fF(i, j, k, nzm1, nzm1_nxm1,     &
                                                  sgnvz, sgnvx, sgnvy,          &
                                                  slowPerm, slow, slowStencils) &
                       BIND(C, NAME='fteik_prefetchSlowness64fF')
            USE ISO_C_BINDING
            IMPLICIT NONE 
            INTEGER(C_INT), INTENT(IN) :: slowPerm(19), i, j, k, nzm1, nzm1_nxm1, &
                                          sgnvz, sgnvx, sgnvy
            REAL(C_DOUBLE), DIMENSION(:), INTENT(IN) :: slow 
            REAL(C_DOUBLE), INTENT(OUT) :: slowStencils(7)
            !DIR ATTRIBUTES ALIGN: 64:: slowStencils
            END SUBROUTINE

            SUBROUTINE fteik_getTravelTimePermF(sweep, perm, ierr) &
                       BIND(C, NAME='fteik_getTravelTimePermF')
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(IN) :: sweep
            INTEGER(C_INT), INTENT(OUT) :: perm(8), ierr
            END SUBROUTINE

            SUBROUTINE fteik_getSlownessPermF(sweep, perm, ierr) &
                       BIND(C, NAME='fteik_getSlownessPermF')
            USE ISO_C_BINDING
            INTEGER(C_INT), INTENT(IN) :: sweep
            INTEGER(C_INT), INTENT(OUT) :: perm(19), ierr
            END SUBROUTINE

            SUBROUTINE fteik_getSweepSigns64fF(sweep,               &
                                               sgntz, sgntx, sgnty, &
                                               sgnvz, sgnvx, sgnvy, &
                                               sgnrz, sgnrx, sgnry) &
            BIND(C, NAME='fteik_getSweepSigns64fF')
            USE ISO_C_BINDING
            IMPLICIT NONE 
            INTEGER(C_INT), INTENT(IN) :: sweep
            INTEGER(C_INT), INTENT(OUT) :: sgntz, sgntx, sgnty, sgnvz, sgnvx, sgnvy
            REAL(C_DOUBLE), INTENT(OUT) :: sgnrz, sgnrx, sgnry
            END SUBROUTINE

            PURE INTEGER(C_INT) FUNCTION grid2indexF(i, j, k, nz, nzx)   &
                                BIND(C, NAME='fteik_grid2indexF')
            !$OMP DECLARE SIMD(grid2indexF) UNIFORM(nz, nzx)
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(IN), VALUE :: i, j, k, nz, nzx
            END FUNCTION

            PURE SUBROUTINE index2gridF(igrd, i, j, k, ierr) &
                            BIND(C, NAME='fteik_index2gridF')
            !$OMP DECLARE SIMD(index2gridF)
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(IN), VALUE :: igrd 
            INTEGER(C_INT), INTENT(OUT) :: i, j, k, ierr
            END SUBROUTINE

            PURE INTEGER(C_INT) FUNCTION velGrid2indexF(i, j, k, nzm1, nzm1_nxm1)  &
                                BIND(C, NAME='fteik_velGrid2indexF')
            !$OMP DECLARE SIMD(velGrid2indexF) UNIFORM(nzm1, nzm1_nxm1)
            USE ISO_C_BINDING
            IMPLICIT NONE
            INTEGER(C_INT), INTENT(IN), VALUE :: i, j, k, nzm1, nzm1_nxm1
            END FUNCTION
